# SafeRoute-RAG

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  app.py  plan.md  project_background.md  pyproject.toml  pyrightconfig.json  requirements.txt
.cursor/project-context/: current-plan.md  decisions.md
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: agents.yaml
docs/: README.md  architecture.md  configuration.md  deployment.md  development-and-testing.md  gemini-data-collection-prompts.md  knowledge-base-and-ingest.md  roadmap.md
sample_docs/: manifest.yaml  questions.md
sample_docs/confidential/: fah_board_minutes_confidential.md  fah_insider_roadmap.md  fah_launch_contract_draft.md  fah_unreleased_financial_forecast.md
sample_docs/public/: .gitkeep  cao_space_basic_plan.md  ihi_aerospace_defense.md  jaxa_h3_overview.md  jaxa_slim_overview.md  jsat_space_vision.md  mhi_integrated_report.md
scripts/: bootstrap_kb.py  extract_public_corpus.py  run_route_eval.py
src/: __init__.py  config_loader.py  database.py  demo_limits.py  llm_client.py  models.py  orchestrator.py  router.py
src/agents/: __init__.py  audit_agent.py  base.py  rag_answer_agent.py
tests/: conftest.py  test_retrieval.py  test_router.py
