[project]
name = "saferoute-rag"
version = "0.1.0"
description = "Hybrid-RAG demo with local embedding and dynamic two-layer safety routing on ai& Inference."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "openai>=1.3.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.7,<4",
    "pypdf>=4.0.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "transformers>=4.40,<5",
    "fugashi>=1.5.2",
    "unidic-lite>=1.0.8",
    "sentencepiece>=0.2.1",
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
